cmake_minimum_required(VERSION 3.15)
project(cpp)

set(CMAKE_CXX_STANDARD 20)

# add_executable(main acwing_ji_chu_3/836_2.cc "acwing_ji_chu_3/AcWing847.cc")
add_executable(main acwing_lan_4/AcWing466/main.cc)
#add_executable(main acwing_ji_chu_1/AcWing838/main.cc)
#add_executable(main acwing_ji_chu_2/AcWing839/main.cc)
#add_executable(main test/cpp_05.cc)
#add_executable(main acwing_ji_chu_3/AcWing858/main_1.cc)
#add_executable(main acwing_ti_gao_1/AcWing1021/main_1.cc)
#add_executable(main acwing_ti_gao_2/AcWing1098/main_1.cc)
#add_executable(main acwing_ji_chu_5/AcWing338/main.cc)
#add_executable(main acwing_ji_chu_6/AcWing907/main.cc)
#add_executable(main acwing_ji_chu_4/AcWing866.cc)
#add_executable(main src/main_1.cc)
#add_executable(main luo_gu/P1020/main.cc)

#include("F:/CLIon/vcpkg/scripts/buildsystems/vcpkg.cmake")
#find_package(fmt CONFIG REQUIRED)
#target_link_libraries(main PRIVATE fmt::fmt)